--- a/presentation.html
+++ b/presentation.html
@@ -22,22 +22,22 @@
 		<br>
 		<br>
 
-			<img src="D:\fakultet\VI semestar\kreativno kodiranje\4_presentation\Ryoji Ikeda-01.png" style="width: 1334px; height: 750px;">
+			<img src="https://raw.githubusercontent.com/nadjaristovic/ispit_creativecoding/main/Ryoji%20Ikeda-01.png" style="width: 1334px; height: 750px;">
 
 			<br>
 
-			<img src="D:\fakultet\VI semestar\kreativno kodiranje\4_presentation\Ryoji Ikeda-02.png" style="width: 1334px; height: 750px;">
+			<img src="https://raw.githubusercontent.com/nadjaristovic/ispit_creativecoding/main/Ryoji%20Ikeda-02.png" style="width: 1334px; height: 750px;">
 
 			<br>
 
-			<img src="D:\fakultet\VI semestar\kreativno kodiranje\4_presentation\Ryoji Ikeda-03.png" style="width: 1334px; height: 750px;">
+			<img src="https://raw.githubusercontent.com/nadjaristovic/ispit_creativecoding/main/Ryoji%20Ikeda-03.png" style="width: 1334px; height: 750px;">
 
 			<br>
 
-			<img src="D:\fakultet\VI semestar\kreativno kodiranje\4_presentation\Ryoji Ikeda-04.png" style="width: 1334px; height: 750px;">
+			<img src="https://raw.githubusercontent.com/nadjaristovic/ispit_creativecoding/main/Ryoji%20Ikeda-04.png" style="width: 1334px; height: 750px;">
 			
 			<br>
 
-			<img src="D:\fakultet\VI semestar\kreativno kodiranje\4_presentation\Ryoji Ikeda-05.png" style="width: 1334px; height: 750px;">
+			<img src="https://raw.githubusercontent.com/nadjaristovic/ispit_creativecoding/main/Ryoji%20Ikeda-05.png" style="width: 1334px; height: 750px;">
 	</body>
 </html>
