--- a/creative_data.html
+++ b/creative_data.html
@@ -6,7 +6,7 @@
 				<link rel="stylesheet" type="text/css" href="css/style.css">
 				<link rel="preconnect" href="https://fonts.gstatic.com">
 				<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-				<link rel="icon" href="F:\fakultet\VII semestar\programiranje za umetnike\za ispit\ikonica-01.png" type="image/gif" sizes="16x16"
+				
 		</head>
 
 		<body>
@@ -21,7 +21,7 @@
 			<br>
 			<br>
 			<br>
-				<img width="685px" height="379px" src="D:\fakultet\VI semestar\kreativno kodiranje\ispit\15 ispita.png" style="width: 685px; height: 379px;">
+				<img width="685px" height="379px" src="https://raw.githubusercontent.com/nadjaristovic/ispit_creativecoding/main/15%20ispita.png" style="width: 685px; height: 379px;">
 			
 		</body>
 	</html>
