--- a/emotions.html
+++ b/emotions.html
@@ -6,7 +6,7 @@
 				<link rel="stylesheet" type="text/css" href="css/style.css">
 				<link rel="preconnect" href="https://fonts.gstatic.com">
 				<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-				<link rel="icon" href="F:\fakultet\VII semestar\programiranje za umetnike\za ispit\ikonica-01.png" type="image/gif" sizes="16x16"
+				
 		</head>
 
 		<body>
@@ -25,13 +25,13 @@
 				<table width="100%" border="0">
 					<tr>
 						<td align="center">
-							<img src="D:\fakultet\VI semestar\kreativno kodiranje\1_emotions\rage.jpg" style="width: 400px; height: 400px;">
+							<img src="https://raw.githubusercontent.com/nadjaristovic/ispit_creativecoding/main/rage.JPG" style="width: 400px; height: 400px;">
 						</td>
 						<td align="center">
-							<img src="D:\fakultet\VI semestar\kreativno kodiranje\1_emotions\anticipation.jpg" style="width: 400px; height: 400px;">
+							<img src="https://raw.githubusercontent.com/nadjaristovic/ispit_creativecoding/241c91c7e317e68cd7e1594d041df055bddc63a3/anticipation.JPG" style="width: 400px; height: 400px;">
 						</td>
 						<td align="center">
-							<img src="D:\fakultet\VI semestar\kreativno kodiranje\1_emotions\fear.jpg" style="width: 400px; height: 400px;">
+							<img src="https://raw.githubusercontent.com/nadjaristovic/ispit_creativecoding/main/fear.JPG" style="width: 400px; height: 400px;">
 						</td>
 					</tr>
 				</table>
