--- a/emotions_corona.html
+++ b/emotions_corona.html
@@ -7,7 +7,7 @@
 					<link rel="stylesheet" type="text/css" href="css/style.css">
 					<link rel="preconnect" href="https://fonts.gstatic.com">
 					<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-					<link rel="icon" href="F:\fakultet\VII semestar\programiranje za umetnike\za ispit\ikonica-03.png" type="image/gif" sizes="16x16"
+					
 			
 	</head>
 	<body>
@@ -24,9 +24,7 @@
 		<br>
 		<br>
 
-		<video controls="autoplay">
-			<source src="D:\fakultet\VI semestar\kreativno kodiranje\3_emotions_corona\proba1mp4.mp4" type="video/mp4">
-		</video>
+		<iframe width="1120" height="630" src="https://www.youtube.com/embed/rpCLqZ-zg-A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		
 
 	</body>
