--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-	<link rel="icon" href="F:\fakultet\VII semestar\programiranje za umetnike\za ispit\ikonica0-01.png" type="image/gif" sizes="16x16">
+	
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
     <script src="sketch.js"></script>
 </head>
@@ -21,7 +21,7 @@
 			
 				<table width="100%" height="50" border="0">
 	   				<tr>
-	     			 		<td align="left"><a href="emotions.html" target="_self">
+	     			 		<td align="center"><a href="emotions.html" target="_self">
 	     			 			<h2>01_emocije</h2>	     			 		
 	     			 		</td>
 	    			 </tr>
@@ -29,7 +29,7 @@
 	    			 <br>
 
 	    			 <tr>
-	    			 	<td align="left"><a href="poster.html" target="_self">
+	    			 	<td align="center"><a href="poster.html" target="_self">
 	     			 			<h2>02_poster za emociju</h2>
 	     			 		</td>
 	    			 </tr>
@@ -37,7 +37,7 @@
 	    			 <br>
 
 	    			 <tr>
-	    			 	<td align="left"><a href="emotions_corona.html" target="_self">
+	    			 	<td align="center"><a href="emotions_corona.html" target="_self">
 	     			 			<h2>03_emocije za vreme karantina</h2>
 	     			 		</td>
 	    			 </tr>
@@ -45,7 +45,7 @@
 	    			 <br>
 
 	    			 <tr>
-	    			 	<td align="left"><a href="presentation.html" target="_self">
+	    			 	<td align="center"><a href="presentation.html" target="_self">
 	     			 			<h2>04_prezentacija code + form</h2>
 	     			 		</td>
 	    			 </tr>
@@ -53,7 +53,7 @@
 					<br>
 
 					<tr>
-						<td align="left"><a href="visualisation_corona.html" target="_self">
+						<td align="center"><a href="visualisation_corona.html" target="_self">
 							<h2>05_kreativna vizuelizacija podataka o broju zaraženih u Srbiji u periodu od 06.04. do 11.04.</h2>
 						</td>
 					</tr>
@@ -61,7 +61,7 @@
 					<br>
 
 					<tr>
-						<td align="left"><a href="visualisation_music.html" target="_self">
+						<td align="center"><a href="visualisation_music.html" target="_self">
 							<h2>06_kreativna vizuelizacija muzike</h2>
 						</td>
 					</tr>
@@ -69,7 +69,7 @@
 					<br>
 
 					<tr>
-						<td align="left"><a href="cover_art.html" target="_self">
+						<td align="center"><a href="cover_art.html" target="_self">
 							<h2>07_animirani cover art</h2>
 						</td>
 					</tr>
@@ -77,7 +77,7 @@
 					<br>
 
 					<tr>
-						<td align="left"><a href="creative_data.html" target="_self">
+						<td align="center"><a href="creative_data.html" target="_self">
 	     			 			<h2>08_kreativna data vizuelizacija</h2>
 	     			 		</td>
 					</tr>
