--- a/poster.html
+++ b/poster.html
@@ -13,6 +13,7 @@
 			<br>
 			<br>
 			
+			<p align="left"><a href="index.html"> <<<   </p>
 			<p>poster koji koristi tipografiju i grafiku iz p5.js biblioteke</p>
 
 			<br>
@@ -21,7 +22,7 @@
 			<br>
 			<br>
 			
-			<img align="center" src="D:\fakultet\VI semestar\kreativno kodiranje\2_poster\vir-01.png" style="height: 637px; width:900px;"> 
+			<img align="center" src="https://raw.githubusercontent.com/nadjaristovic/ispit_creativecoding/main/vir-01.png" style="height: 637px; width:900px;"> 
 				
 		</body>
 	</html>
