--- a/visualisation_music.html
+++ b/visualisation_music.html
@@ -6,7 +6,7 @@
 				<link rel="stylesheet" type="text/css" href="css/style.css">
 				<link rel="preconnect" href="https://fonts.gstatic.com">
 				<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-				<link rel="icon" href="F:\fakultet\VII semestar\programiranje za umetnike\za ispit\ikonica-01.png" type="image/gif" sizes="16x16"
+				
 		</head>
 
 		<body>
@@ -21,10 +21,7 @@
 			<br>
 			<br>
 
-			<video width="670" controls="autoplay">
-  					<source src="D:\fakultet\VI semestar\kreativno kodiranje\ispit\music_visualisation.mp4" type="video/mp4">
-  					
-			</video>
+			<iframe width="1120" height="630" src="https://www.youtube.com/embed/y5ageeNGxNc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 		</body>
 	</html>
