--- a/cover_art.html
+++ b/cover_art.html
@@ -21,7 +21,11 @@
 			<br>
 			<br>
 			<br>
-				<iframe width="1120" height="630" src="https://www.youtube.com/embed/Y7qocoK6x40" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<video width="320" height="240" controls>
+  <source src="https://github.com/nadjaristovic/ispit_creativecoding/blob/main/coverart.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+				
 				
 			
 		</body>
