--- a/visualisation_music.html
+++ b/visualisation_music.html
@@ -21,7 +21,10 @@
 			<br>
 			<br>
 
-			<iframe width="1120" height="630" src="https://www.youtube.com/embed/y5ageeNGxNc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<video width="320" height="240" controls>
+				  <source src="https://github.com/nadjaristovic/ispit_creativecoding/blob/main/music_visualisation.mp4" type="video/mp4">
+ 				
+			</video>
 			
 		</body>
 	</html>
