--- a/creative_data.html
+++ b/creative_data.html
@@ -6,6 +6,9 @@
 				<link rel="stylesheet" type="text/css" href="css/style.css">
 				<link rel="preconnect" href="https://fonts.gstatic.com">
 				<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+			
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
+    <script src="sketch.js"></script>
 				
 		</head>
 
