--- a/visualisation_corona.html
+++ b/visualisation_corona.html
@@ -7,6 +7,8 @@
 						<link rel="preconnect" href="https://fonts.gstatic.com">
 						<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 						
+		 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
+    <script src="sketch.js"></script>
 
 					
 	</head>
